--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -11,11 +11,12 @@
             <p class="error">{{ error }}</p>
         {% endif %}
         <form method="post">
-            Nome: <input type="text" name="nome" class="input-field"><br>
-            CPF: <input type="text" name="cpf" class="input-field"><br>
-            Data de Nascimento: <input type="date" name="data_nascimento" class="input-field"><br>
-            Login: <input type="text" name="login" class="input-field"><br>
-            Senha: <input type="password" name="senha" class="input-field"><br>
+            Nome: <input type="text" name="nome" class="input-field" required><br>
+            CPF: <input type="text" name="cpf" class="input-field" required><br>
+            Data de Nascimento: <input type="date" name="data_nascimento" class="input-field" required><br>
+            E-mail: <input type="email" name="login" class="input-field" required ><br>
+            Senha: <input type="password" name="senha" class="input-field" required><br>
+            Telefone: <input type="number" name="tel" class="input-field" required><br>
             <input type="submit" value="Cadastrar" class="submit-button">
         </form>
         <a href="/login">Já tem uma conta? Faça login</a>
